--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,9 +1,9 @@
 #          _                 _ _   _
 #     __ _| | __ _  ___ _ __(_) |_| |_ _   _
-#   / _` | |/ _` |/ __| '__| | __| __| | | |
-#  | (_| | | (_| | (__| |  | | |_| |_| |_| |
-#  \__,_|_|\__,_|\___|_|  |_|\__|\__|\__, |
-#                                    |___/
+#    / _` | |/ _` |/ __| '__| | __| __| | | |
+#   | (_| | | (_| | (__| |  | | |_| |_| |_| |
+#    \__,_|_|\__,_|\___|_|  |_|\__|\__|\__, |
+#                                       |___/
 
 # Configuration for Alacritty, the GPU enhanced terminal emulator
 
@@ -28,6 +28,7 @@ window:
   dimensions:
     columns: 100
     lines: 85
+    opacity: 0.6
 
 # Window padding (changes require restart)
   #
