Fix transparency through mutter-rounded

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -29,7 +29,7 @@ window:
     columns: 100
     lines: 85
     
-  opacity: 0.8
+  #opacity: 0.8
 # Window padding (changes require restart)
   #
   # Blank space added around the window in pixels. This padding is not scaled by
