Add fish config

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -151,3 +151,6 @@ colors:
   indexed_colors:
     - { index: 16, color: '0xF8BD96' }
     - { index: 17, color: '0xF5E0DC' }
+
+shell:
+  program: /usr/bin/fish
