--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -25,8 +25,8 @@ print_info() {
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
+     info "Battery" battery
+     info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
@@ -526,7 +526,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(4 7 4 4 4 7)
 
 
 # Text Options
@@ -771,7 +771,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(4 7 4 4 4 4)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
