Add icons and new structure to neofetch

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,32 +1,30 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
-
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
-
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-     info "Battery" battery
-     info "Font" font
+    info " ​ ​  " title
+    prin "$(color 7)┌────────────────────────────────────────┐"
+    info " ​ ​  " distro
+    info " ​ ​  " wm
+    info " ​ ​  " shell
+    info " ​ ​  " term
+    info " ​ ​  " theme
+    info " ​ ​  " term_font
+    info " ​ ​  " uptime
+    info " ​ ​  " de
+    info " ​ ​  " song
+    info " ​ ​  " gpu
+	  info " ​ ​  " packages
+    prin "$(color 7)└────────────────────────────────────────┘"
+   
+    #info "Resolution" resolution
+    #info "WM Theme" wm_theme
+    #info "CPU" cpu
+    #info "Memory" memory
+    ## info "GPU Driver" gpu_driver  # Linux/macOS only
+    ## info "CPU Usage" cpu_usage
+    ## info "Disk" disk
+     #info "Battery" battery
+     #info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
@@ -85,7 +83,7 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="on"
+os_arch="off"
 
 
 # Uptime
@@ -144,7 +142,7 @@ memory_unit="mib"
 # on:   '998 (pacman), 8 (flatpak), 4 (snap)'
 # tiny: '908 (pacman, flatpak, snap)'
 # off:  '908'
-package_managers="on"
+package_managers="tiny"
 
 
 # Shell
@@ -283,7 +281,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="all"
+gpu_type="dedicated"
 
 
 # Resolution
@@ -488,7 +486,7 @@ music_player="auto"
 #
 # Example:
 # default: 'Song: Jet - Get Born - Sgt Major'
-song_format="%artist% - %album% - %title%"
+song_format="%title% by %artist%"
 
 # Print the Artist, Album and Title on separate lines
 #
@@ -563,7 +561,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=" ❯"
 
 
 # Color Blocks
