--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1,13 +1,25 @@
 {
-    "workbench.colorTheme": "Catppuccin Macchiato",
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorCustomizations": { // En esta línea se permite customizar los temas descargados
-
-    },
-    // Fonts
-    "editor.fontFamily": "'JetBrainsMono Nerd Font', 'monospace', monospace",
-    "terminal.integrated.fontFamily": "'JetBrainsMono Nerd Font'",
-    "editor.formatOnSave": true, // Linea opcional: Permite ajustar el codigo automaticamente al guardar
-    "C_Cpp.clang_format_fallbackStyle": "Google",
-    "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0, IndentCaseLabels: false, TabWidth: 4, UseTab: ForIndentation, SpacesBeforeTrailingComments: 3, BreakBeforeBraces: Custom, BraceWrapping: { BeforeElse: true }}"
+  "workbench.colorTheme": "Catppuccin Macchiato",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorCustomizations": {
+    // En esta línea se permite customizar los temas descargados
+  },
+  // Fonts
+  "editor.fontFamily": "'JetBrainsMono Nerd Font', 'monospace', monospace",
+  "terminal.integrated.fontFamily": "'JetBrainsMono Nerd Font'",
+  // Formatters
+  "editor.formatOnSave": true, // Linea opcional: Permite ajustar el codigo automaticamente al guardar
+  // "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    // "editor.defaultFormatter":"esbenp.prettier-vscode"
+  },
+  "[c]": {
+    "editor.defaultFormatter": "ms-vscode.cpptools"
+  },
+  "C_Cpp.clang_format_fallbackStyle": "Google",
+  "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0, IndentCaseLabels: false, TabWidth: 4, UseTab: ForIndentation, SpacesBeforeTrailingComments: 3, BreakBeforeBraces: Custom, BraceWrapping: { BeforeElse: true }}",
+  "liveServer.settings.donotShowInfoMsg": true,
+  "[python]": {
+    "editor.formatOnType": true
+  }
 }
