chore: Update icons

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -5,13 +5,13 @@ print_info() {
     prin "$(color 7)┌────────────────────────────────────────┐"
     info " ​ ​  " distro
     info " ​ ​  " wm
-    info " ​ ​  " shell
+    info " ​ ​ 󰈺 " shell
     info " ​ ​  " term
     info " ​ ​  " theme
     info " ​ ​  " term_font
-    info " ​ ​  " uptime
+    info " ​ ​  " uptime
     info " ​ ​  " de
-    info " ​ ​  " song
+    info " ​ ​ 󰝚 " song
     info " ​ ​  " gpu
 	  info " ​ ​  " packages
     prin "$(color 7)└────────────────────────────────────────┘"
